Refactor/warning and redundant fixes (#35)
* Removed redundant initializers in some discord commands, did check before using an optional in ALStaffCommandExecutor and fixed incorrect formatted strings not receiving the correct number of arguments

* Changed some lambda expressions to method references in .map(), removed some unused elements, redundant expressions, more modern string representations, unused imports, unused exceptions and fixed bad README table formatting